# yuiop29re

./: CMakeLists.txt  Makefile  README.md
.github/workflows/: build.yml
helloworld/: CMakeLists.txt  ledarray.c  main.c
libs/: CMakeLists.txt
libs/driver_rotary_encoder/: CMakeLists.txt  README.md  rotary_encoder.c
libs/driver_rotary_encoder/include/driver/: rotary_encoder.h
libs/driver_rotaryencoder/: CMakeLists.txt  rotaryencoder.c
libs/driver_switch_matrix/: CMakeLists.txt  switch_matrix.c
libs/driver_switch_matrix/include/driver/: switch_matrix.h
libs/driver_ws2812_array/: CMakeLists.txt  ws2812_array.c
libs/driver_ws2812_array/include/driver/: ws2812_array.h
re_mon/: CMakeLists.txt  README.md  main.c
sm_mon/: main.c
ssd1306_i2c/: CMakeLists.txt  ssd1306_i2c.c
tests/: CMakeLists.txt  README.md
tests/gpiomon/: CMakeLists.txt  main.c
tests/helloworld/: CMakeLists.txt  main.c
tests/re_mon/: CMakeLists.txt
tests/sm_mon/: CMakeLists.txt
tests/ssd1306_i2c/: CMakeLists.txt
tests/testfirm/: CMakeLists.txt  main.c  ssd1306.c  ssd1306.h  ssd1306_font.h
